package at.fhtw.ocrworker.domain.model;

import java.util.UUID;

public record FileToken(UUID token) {
}
